# entering-las-meninas

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md  THIRD-PARTY-NOTICES.md  assignment-1-first-delivery-zh.md  project-plan.md  pyproject.toml  requirements.txt
assets/: README.md
assets/graphs/: README.md  las-meninas-relations.dot  mirror-deletion-difference.dot
data/: README.md  topology-relations.csv  topology-relations.md
outputs/: pipeline-validation.json
outputs/artwork/: README.md
outputs/cnn-analysis/: cnn-analysis.json  spatial-distances.csv  style-distances.csv
outputs/metrics/: image-metrics.csv  layer-metrics.csv  summary.json
outputs/neural-style-transfer/: loss-strength-0p25.csv  loss-strength-0p25.json  loss-strength-0p5.csv  loss-strength-0p5.json  loss-strength-1.csv  loss-strength-1.json  manifest.json
outputs/neural-style-transfer-combined/: loss-strength-1.csv  loss-strength-1.json  manifest.json
outputs/presentation/: qa-report.txt
outputs/tables/: analysis-tables.json  cnn-feature-space.csv  (+4 more)
presentation/: build-deck.mjs
report/: final-report-zh.md  final-report.md  sources.md
scripts/: build-analysis-tables.py  check-public-release.sh  download-source-image.sh  render-topology-figures.sh  run-full-pipeline.sh  validate-artifacts.py
src/: __init__.py  cnn-analysis.py  geometry-analysis.py  neural-style-transfer.py  summarize-results.py  transformations.py  visualization.py
tests/: test-cnn-analysis.py  test-neural-style-transfer.py  test-release-scripts.py  test-summarize-results.py  test-transformations.py
(+38 files in other folders)
