[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "las-meninas-cnn"
version = "1.0.0"
description = "CNN-based study of style, geometry, and relational topology in Las Meninas"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "matplotlib>=3.9,<4",
  "numpy>=2.0,<3",
  "opencv-python>=4.10,<5",
  "pandas>=2.2,<3",
  "Pillow>=11,<13",
  "scikit-image>=0.24,<1",
  "scikit-learn>=1.6,<2",
  "scipy>=1.14,<2",
  "torch>=2.5,<3",
  "torchvision>=0.20,<1",
  "tqdm>=4.66,<5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<10",
  "ruff>=0.9,<1",
]

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test-*.py"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]
